# djangox-custom

./: .gitignore  pyproject.toml
accounts/: admin.py  forms.py  models.py
accounts/migrations/: 0002_customuser_phone_number.py
config/: settings.py  urls.py
snacks/: admin.py  models.py  tests.py  urls.py  views.py
snacks/migrations/: 0001_initial.py
templates/: _base.html
templates/account/: login.html  logout.html  signup.html
templates/snacks/: snack_create.html  snack_delete.html  snack_detail.html  snack_list.html  snack_update.html
