[tool.poetry]
name = "djangox-custom"
version = "0.1.0"
description = ""
authors = ["abdullahnazzal <a.nazzal1995@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.1.4"
django-allauth = "0.43.0"
django-crispy-forms = "1.10.0"
django-debug-toolbar = "3.2"
whitenoise = "5.2.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.11b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
